--- a/public/assets/css/novo-design/main_style.css
+++ b/public/assets/css/novo-design/main_style.css
@@ -154,7 +154,7 @@ li {
 }
 
 .institucional-pg {
-    text-align: center;
+    text-align: justify;
     width: 50%;
     margin: 0 auto;
     padding-bottom: 20px;
