--- a/public/assets/css/novo-design/main_style.css
+++ b/public/assets/css/novo-design/main_style.css
@@ -180,30 +180,38 @@ li {
     max-width: 100px;
 }
 
-.img-center{
+.img-center {
     display: flex;
     justify-content: center;
 }
 
-.link-seja-mantenedor{
+.link-seja-mantenedor {
     margin: 0 auto;
-/*    Old: 
+    /*    Old: 
       margin: 5rem 25vw;
       width: 50vw;
 */
     margin: 5rem 0;
     width: 100vw;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
 
-    
+
     background: #311205;
-    
+
     font-size: 1.5rem;
     text-align: center;
     color: dd7e06;
     font-weight: bold;
     text-decoration: none;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.no-bold{
+    font-weight: 100;
 }
