--- a/public/assets/css/novo-design/footer_style.css
+++ b/public/assets/css/novo-design/footer_style.css
@@ -1,4 +1,3 @@
-
 footer {
     width: 100%;
     min-height: 250px;
@@ -68,4 +67,13 @@ footer .boxs:nth-child(4) {
     footer .boxs:nth-child(4) {
         width: 100%;
     }
+}
+
+#btn-whats {
+    display: flex;
+}
+
+#btn-whats>a>#img-whats {
+    justify-content: right;
+
 }
