--- a/public/assets/css/novo-design/main_style.css
+++ b/public/assets/css/novo-design/main_style.css
@@ -183,8 +183,12 @@ li {
 }
 
 .img-center {
+    margin: 2rem 0;
+    margin-right: 1rem;
+    
     display: flex;
     justify-content: center;
+    background: red;
 }
 
 .link-seja-mantenedor {
@@ -194,7 +198,7 @@ li {
       width: 50vw;
 */
     margin: 5rem 0;
-    width: 100vw;
+    width: 98.5vw;
     height: 100px;
     
     display: flex;
@@ -222,4 +226,13 @@ li {
 
 .no-bold {
     font-weight: 100;
+}
+
+#img-text{
+    display: flex;
+    align-items: center;
+}
+
+#imagem-valores{
+    border:4px inset #5f6632;*/
 }
