--- a/public/assets/css/novo-design/footer_style.css
+++ b/public/assets/css/novo-design/footer_style.css
@@ -71,13 +71,11 @@ footer .boxs:nth-child(4) {
 
 #btn-whats {
     display: flex;
-/*    align-items: end;*/
+    align-items: end;
 }
 
 #btn-whats>a>#img-whats {
-    /* position: sticky; */
     top: 100vh;
     left: 100vw;
-/*    width: 90px;*/
-
+    width: 90px;
 }
