--- a/public/assets/css/novo-design/main_style.css
+++ b/public/assets/css/novo-design/main_style.css
@@ -1,4 +1,5 @@
 @import 'form-contato.css';
+@import 'divulgacao.css';
 
 * {
     margin: 0;
@@ -18,7 +19,6 @@ main {
     height: 64vh;
     width: 100%;
     position: static;
-    /* position: fixed; */
     top: 0;
     left: 0;
     object-fit: cover;
@@ -45,8 +45,6 @@ hr {
     border: 2px solid #e77e41;
 
     margin-top: 10px;
-    /*
-    margin-left: -1000px; */
 }
 
 h2,
@@ -179,7 +177,7 @@ li {
 
 #imagem-logo-adad>img {
     margin-top: 1.7rem;
-    max-width: 100px;
+    max-width: 300px;
 }
 
 .img-center {
@@ -192,12 +190,9 @@ li {
 }
 
 .link-seja-mantenedor {
-    margin: 0 auto;
-    /*    Old: 
-      margin: 5rem 25vw;
-      width: 50vw;
-*/
-    margin: 5rem 0;
+    margin: 5rem auto;
+    margin-bottom: 0.5rem;
+    
     width: 98.5vw;
     height: 100px;
     
