CSS - Correções no footer(30/12)

--- a/public/assets/css/novo-design/main_style.css
+++ b/public/assets/css/novo-design/main_style.css
@@ -4,17 +4,20 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
+:root{
+    --bg-nav-footer: #b29269;
+}
 
 main {
+    font-family: 'Poppins', sans-serif;
     background: #e2e2e2;
     z-index: 1;
 }
 
 /* Página Inicial */
-
 .foto-inicial {
     height: 64vh;
     width: 100%;
@@ -69,13 +72,14 @@ h3 {
     padding: 0px 500px 30px;
 }
 
+/* Página Projetos */
 .projetos-igreja {
     text-align: center;
     width: 40%;
     margin: 0 auto;
 }
 
-.projeto-lista {
+.projetos-igreja > .projeto-lista {
     margin: 15px 0px;
     list-style-type: square;
     list-style-position: inside;
@@ -83,8 +87,8 @@ h3 {
     margin-left: 15%;
 }
 
-.projeto-lista p,
-li {
+
+.projetos-igreja > .projeto-lista :where(p, li) {
     font-size: 18px;
 }
 
@@ -93,88 +97,9 @@ li {
     padding-top: 20px;
 }
 
-.projetos-mais-info a {
+.projetos-mais-info > a {
     color: #e77e41;
 }
-
-.reunioes {
-    text-align: center;
-    background: #e77e41;
-    border-radius: 5px;
-    width: 13%;
-    margin: 0 auto;
-    margin-top: 10px;
-}
-
-.reunioes p {
-    color: #e2e2e2;
-    font-size: 18px;
-    margin: 15px 0px;
-    padding-bottom: 20px;
-}
-
-.reunioes h2 {
-    color: #e2e2e2;
-}
-
-/* Página Reuniões */
-
-.reunioes-pg {
-    text-align: center;
-    background: #e77e41;
-    border-radius: 5px;
-    width: 20%;
-    margin: 0 auto;
-    margin-top: 10px;
-}
-
-.reunioes-pg p {
-    color: #e2e2e2;
-    font-size: 18px;
-    margin: 15px 0px;
-    padding-bottom: 20px;
-}
-
-.reunioes-pg h2 {
-    color: #e2e2e2;
-}
-
-.reunioes-p {
-    text-align: center;
-    font-size: 18px;
-    width: 50%;
-    margin: 0 auto;
-    padding-bottom: 20px;
-}
-
-.reunioes-p h2 {
-    font-family: 'Poppins', sans-serif;
-    padding-bottom: 20px;
-
-}
-
-.institucional-pg {
-    text-align: justify;
-    width: 50%;
-    margin: 0 auto;
-    padding-bottom: 20px;
-}
-
-.institucional-pg p {
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-    font-size: 18px;
-}
-
-.institucional-pg h2 {
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-    padding-bottom: 20px;
-}
-
-
 #imagem-logo-adad>img {
     margin-top: 1.7rem;
     max-width: 300px;
@@ -229,5 +154,6 @@ li {
 }
 
 #imagem-valores{
-    border:4px inset #5f6632;*/
-}
+    border:4px inset #5f6632;
+} 
+
