--- a/public/assets/css/novo-design/footer_style.css
+++ b/public/assets/css/novo-design/footer_style.css
@@ -5,15 +5,18 @@ footer {
     display: flex;
     justify-content: center;
     border-top: 2px solid #a04d0a;
+    font-size: 1rem;
 }
 
 footer .boxs {
     width: 320px;
     min-height: 150px;
     padding: 20px;
-    font-family: 'Poppins', sans-serif;
+    /*  font-family: 'Poppins', sans-serif;*/
+    /*font-family: sans-serif;*/
     letter-spacing: 1px;
 }
+
 
 footer .boxs:nth-child(4) {
     width: 400px;
