--- a/public/assets/css/igreja/styles.css
+++ b/public/assets/css/igreja/styles.css
@@ -1,160 +1,32 @@
+/* nav & footer */
+@import 'nav_style.css';
+@import 'footer_style.css';
+
+/* main das páginas do site*/
+@import 'main.css';
+
+/* página inicial */
+@import 'página-inicial.css';
+
 /* formulário Seja Mantenedor */
 @import 'form-contato.css';
 
 /* página divulgação */
 @import 'divulgacao.css';
 
+/* seção: O que é, Visão, Missão, Objetivo, Valores, Meta */
+@import 'secoes-pagina-inicial.css';
+
+/* Texto Acesse aqui para ser mantenedor */
+@import 'link-seja-mantenedor.css';
+
 /* mensgagem após envio de email */
 @import 'message-after-email.css';
 
-/* nav & footer */
-@import 'nav_style.css';
-@import 'footer_style.css';
-
-
 /* Globais */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-:root{
-    --bg-nav-footer: #b29269;
-}
-
-.img-center {
-    margin: 2rem 0;
-    margin-right: 1rem;
-    
-    display: flex;
-    justify-content: center;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.no-bold {
-    font-weight: 100;
-}
+@import 'globais.css';
 
 #div_imgValores-text{
     display: flex;
     align-items: center;
 }
-
-
-
-/* main do site */
-main {
-    font-family: 'Poppins', sans-serif;
-    background: #e2e2e2;
-    z-index: 1;
-}
-
-/* Página Inicial */
-.foto-inicial {
-    height: 64vh;
-    width: 100%;
-    position: static;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-}
-
-.slogan-inicio h1 {
-    color: dd7e06;
-    text-align: center;
-    font-size: 56px;
-    padding-top: 4vh;
-    padding-bottom: 4vh;
-    background: #311205;
-    border-bottom: 2px solid #e77e41;
-    cursor: default;
-}
-
-hr {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-    width: 100vw;
-
-    border: 2px solid #e77e41;
-
-    margin-top: 10px;
-}
-
-h2,
-h3 {
-    padding-top: 30px;
-}
-
-h3 {
-    color: #da7438;
-}
-
-/* seção: O que é, Visão, Missão, Objetivo, Valores, Meta */
-.projetos-igreja {
-    text-align: center;
-    width: 40%;
-    margin: 0 auto;
-}
-
-.projetos-igreja > .projeto-lista {
-    margin: 15px 0px;
-    list-style-type: square;
-    list-style-position: inside;
-    text-align: left;
-    margin-left: 15%;
-}
-
-
-.projetos-igreja > .projeto-lista :where(p, li){
-    font-size: 18px;
-}
-
-.projetos-mais-info {
-    text-align: center;
-    padding-top: 20px;
-}
-
-} 
-
-
-.projetos-mais-info > a {
-    color: #e77e41;
-}
-
-#imagem-valores{
-    border:4px inset #5f6632;
-
-}
-/* Texto Acesse aqui para ser mantenedor */
-.link-seja-mantenedor {
-    margin: 5rem auto;
-    margin-bottom: 0.5rem;
-    
-    width: 98.5vw;
-    height: 100px;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
-    background: #311205;
-
-    font-size: 1.5rem;
-    text-align: center;
-    color: #dd7e06;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.link-seja-mantenedor:hover {
-    color: #311205;
-    background: #dd7e06;
-}
-
