--- a/public/assets/css/igreja/página-inicial.css
+++ b/public/assets/css/igreja/página-inicial.css
@@ -8,15 +8,40 @@
     object-fit: cover;
 }
 
-.slogan-inicio h1 {
-    color: dd7e06;
-    text-align: center;
-    font-size: 56px;
-    padding-top: 4vh;
-    padding-bottom: 4vh;
+.slogan-inicio{
+    margin: 0;
+    padding: 0;
+    
+    width: 100vw;
+    
+    display: flex;
+ 
     background: #311205;
     border-bottom: 2px solid #e77e41;
+}
+
+.slogan-inicio > h1 {
+    /*padding-top: 4vh;
+    padding-bottom: 4vh;
+
+    */
+    margin-right: 15%;
+    width: 70%;
+    
+
+    
+    text-align: left;
+    font-size: 56px;
+    color: #dd7e06;
+    
     cursor: default;
+}
+
+.slogan-inicio > img{
+    margin-left: 10%;
+    width: 20%;
+    height: 100px;
+    background: yellow;
 }
 
 hr {
