--- a/public/assets/css/igreja/link-seja-mantenedor.css
+++ b/public/assets/css/igreja/link-seja-mantenedor.css
@@ -1,8 +1,9 @@
 .link-seja-mantenedor {
-    margin: 5rem auto;
+    margin-top: 5rem;
+
     margin-bottom: 0.5rem;
     
-    width: 98.5vw;
+    width: 100vw;
     height: 100px;
     
     display: flex;
