--- a/public/assets/css/igreja/nav_style.css
+++ b/public/assets/css/igreja/nav_style.css
@@ -1,3 +1,6 @@
+/* Responsividade */
+@import 'nav_style_responsivo.css';
+
 nav {
     display: flex;
     justify-content: space-around;
@@ -8,30 +11,35 @@ nav {
 
 }
 
-.nav-logo {
-    color: #e2e2e2;
+nav > .logo {
+    margin-left: 5%;
+    margin-right: 10%;
+
+    font-size: 25px;
     text-transform: uppercase;
     letter-spacing: 3px;
-    font-size: 20px;
-    cursor: default;
+    color: #e2e2e2;
+    
+    cursor: default;    
 }
 
-.nav-links {
+nav > .links {
     display: flex;
     justify-content: space-around;
     width: 40%;
 }
 
-.nav-links li {
+nav > .links li {
     list-style: none;
 }
 
-.nav-links a {
-    color: #e2e2e2;
+nav > .links a {
     text-decoration: none;
+    
+    font-size: 21px;
+    color: #e2e2e2;
     letter-spacing: 1px;
     font-weight: bold;
-    font-size: 16px;
 }
 
 .burger {
@@ -40,77 +48,12 @@ nav {
 }
 
 .burger div {
+    margin: 5px;
+
     width: 25px;
     height: 3px;
+
     background: #e2e2e2;
-    margin: 5px;
+    
     transition: all 0.3s ease;
-}
-
-@media screen and (max-width:1024px) {
-    .nav-links {
-        width: 60%;
-    }
-}
-
-@media screen and (max-width:800px) {
-    body {
-        overflow-x: hidden;
-    }
-
-    .nav-links {
-        position: absolute;
-        right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background: #c7652c;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 40%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-    }
-
-    .nav-links li {
-        opacity: 1;
-    }
-
-    .burger {
-        display: block;
-    }
-}
-
-.nav-active {
-    transform: translateX(0%);
-}
-
-@keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateX(50px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-
-.toggle .line1 {
-    transform: rotate(-45deg) translate(-5px, 6px);
-}
-
-.toggle .line2 {
-    opacity: 0;
-}
-
-.toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
-}
-
-.nav-links a:hover {
-    font-size: 16px;
-    font-weight: bolder;
-    color: white;
 }
