--- a/public/assets/css/igreja/página-inicial.css
+++ b/public/assets/css/igreja/página-inicial.css
@@ -21,10 +21,9 @@
 }
 
 .slogan-inicio > h1 {
-    /*padding-top: 4vh;
+    padding-top: 4vh;
     padding-bottom: 4vh;
 
-    */
     margin-right: 15%;
     width: 70%;
     
