--- a/public/assets/css/igreja/nav_style_responsivo.css
+++ b/public/assets/css/igreja/nav_style_responsivo.css
@@ -1,5 +1,5 @@
 @media screen and (max-width:1024px) {
-    nav > .links {
+    nav .links {
         width: 60%;
     }
 }
@@ -9,7 +9,7 @@
         overflow-x: hidden;
     }
 
-    nav > .links {
+    nav .links {
         width: 40%;
         height: 92vh;
 
@@ -17,25 +17,28 @@
         right: 0px;
         
         position: absolute;
-
-        background: #c7652c;
-        
-
+    
         display: flex;
         flex-direction: column;
         align-items: center;
 
+        background: var(--bg-nav-footer);
         
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
 
-    nav > .links li {
+    nav .links > li {
         opacity: 1;
     }
 
-    .burger {
-        display: block;
+    .burger{
+        display: unset;
+        cursor: pointer;
+    }
+    
+    .burger > div{
+    background: #e2e2e2;    
     }
 }
 
@@ -55,19 +58,19 @@
     }
 }
 
-.toggle .line1 {
+.toggle > .line1 {
     transform: rotate(-45deg) translate(-5px, 6px);
 }
 
-.toggle .line2 {
+.toggle > .line2 {
     opacity: 0;
 }
 
-.toggle .line3 {
+.toggle > .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
 }
 
-nav > .links a:hover {
+nav .links > a:hover {
     font-weight: bolder;
     color: white;
 }
