--- a/public/assets/css/igreja/página-inicial.css
+++ b/public/assets/css/igreja/página-inicial.css
@@ -2,6 +2,7 @@
 .foto-inicial {
     height: 64vh;
     width: 100%;
+
     position: static;
     top: 0;
     left: 0;
@@ -20,26 +21,24 @@
     border-bottom: 2px solid #e77e41;
 }
 
-.slogan-inicio > h1 {
-    padding-top: 4vh;
-    padding-bottom: 4vh;
-
-    margin-right: 15%;
-    width: 70%;
-    
-
-    
-    text-align: left;
-    font-size: 56px;
-    color: #dd7e06;
-    
-    cursor: default;
-}
-
-.slogan-inicio > img{
+.slogan-inicio img{
     margin-left: 10%;
     width: 20%;
     height: 100px;
+}
+
+
+.slogan-inicio > h1 {
+    margin-right: 15%;
+    padding-top: 1vh;
+
+    width: 70%;
+        
+    text-align: left;
+    font-size: 56px;
+    color: #dd7e06;
+
+    cursor: default;
 }
 
 hr {
