css - responsividade da página inicial

--- a/public/assets/css/igreja/styles.css
+++ b/public/assets/css/igreja/styles.css
@@ -23,6 +23,9 @@
 /* Texto Acesse aqui para ser mantenedor */
 @import 'link-seja-mantenedor.css';
 
+/* Bandeira de Santa Catarina e imagem de família */
+@import 'bandeira-familia.css';
+
 /* mensgagem após envio de email */
 @import 'message-after-email.css';
 
