--- a/public/assets/css/associacao/styles.css
+++ b/public/assets/css/associacao/styles.css
@@ -9,7 +9,7 @@
 @import 'main.css';
 
 /* página inicial */
-@import 'página-inicial.css';
+@import 'pagina-inicial.css';
 
 /* formulário Seja Mantenedor */
 @import 'form-contato.css';
