--- a/public/assets/css/associacao/header_style.css
+++ b/public/assets/css/associacao/header_style.css
@@ -3,7 +3,7 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;   
-    min-height: 8vh;
+    min-height: 19vh;
     font-family: 'Poppins', sans-serif;
     background: var(--bg-nav-footer);
  
@@ -12,13 +12,15 @@ header{
 .logo {
     margin-left: 5%;
     margin-right: 10%;
-
+    
+    width: 28%;
+    
     font-size: 25px;
     text-transform: uppercase;
     letter-spacing: 3px;
     color: #e2e2e2;
     
-    cursor: default;  
+    cursor: default;
 }
 
 .links {
