HTML - Adicionando história na página Sobre nós 09/09

--- a/public/assets/css/associacao/styles.css
+++ b/public/assets/css/associacao/styles.css
@@ -11,6 +11,8 @@
 /* página inicial */
 @import 'pagina-inicial.css';
 
+@import 'pagina_sobre.css';
+
 /* formulário Seja Mantenedor */
 @import 'form-contato.css';
 
