--- a/public/assets/css/associacao/divulgacao.css
+++ b/public/assets/css/associacao/divulgacao.css
@@ -18,3 +18,33 @@
 	margin: 20px 25%; 
 	width: 50%;
 }
+
+#imagem_biblia_grupo_pgDivulgation{
+	margin: 0 10%;
+	width: 80%;
+}
+
+@media screen and (min-width: 640px){
+
+	#imagem_biblia_grupo_pgDivulgation{
+	margin: 0 15%;
+	width: 70%;
+	}
+}
+
+@media screen and (min-width: 768px){
+
+	#imagem_biblia_grupo_pgDivulgation{
+	margin: 0 20%;
+	width: 60%;
+	}
+}
+
+@media screen and (min-width: 1024px){
+
+	#imagem_biblia_grupo_pgDivulgation{
+	margin: 0 25%;
+	width: 50%;
+	}
+}
+
