CSS - Responsividade página inicial - imagem de logo palavra de vida13/09

--- a/public/assets/css/associacao/styles.css
+++ b/public/assets/css/associacao/styles.css
@@ -11,6 +11,7 @@
 /* página inicial */
 @import 'pagina-inicial.css';
 
+/* Página Sobre Nós*/ 
 @import 'pagina_sobre.css';
 
 /* formulário Seja Mantenedor */
