--- a/public/assets/css/associacao/pagina-inicial.css
+++ b/public/assets/css/associacao/pagina-inicial.css
@@ -14,7 +14,8 @@
     padding: 0;
     
     width: 100vw;
-    
+    align-items: center;
+
     display: flex;
  
     background: #311205;
@@ -23,8 +24,7 @@
 
 .slogan-inicio img{
     margin-left: 3%;
-    width: 20%;
-    height: 100px;
+    width: 35vw;
 }
 
 
@@ -60,4 +60,25 @@ h3 {
 
 h3 {
     color: #da7438;
+}
+
+@media screen and (min-width: 600px){
+    .slogan-inicio img{
+    margin-left: 3%;
+    width: 30vw;
+    }
+}
+
+@media screen and (min-width: 800px){
+    .slogan-inicio img{
+    margin-left: 3%;
+    width: 25vw;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .slogan-inicio img{
+    margin-left: 3%;
+    width: 20vw;
+    }
 }
