--- a/public/assets/css/associacao/header_style.css
+++ b/public/assets/css/associacao/header_style.css
@@ -4,6 +4,7 @@ header{
     justify-content: space-around;
     align-items: center;   
     min-height: 19vh;
+    width: 100vw;
     font-family: 'Poppins', sans-serif;
     background: var(--bg-nav-footer);
  
