--- a/public/assets/css/associacao/pagina-inicial.css
+++ b/public/assets/css/associacao/pagina-inicial.css
@@ -35,7 +35,7 @@
     width: 70%;
         
     text-align: left;
-    font-size: 56px;
+    font-size: 1rem;
     color: #dd7e06;
 
     cursor: default;
@@ -67,6 +67,10 @@ h3 {
     margin-left: 3%;
     width: 30vw;
     }
+
+    .slogan-inicio h1{
+        font-size: 30px;
+    }
 }
 
 @media screen and (min-width: 800px){
@@ -74,11 +78,19 @@ h3 {
     margin-left: 3%;
     width: 25vw;
     }
+
+     .slogan-inicio h1{
+        font-size: 44px;
+    }
 }
 
 @media screen and (min-width: 1024px){
     .slogan-inicio img{
     margin-left: 3%;
     width: 20vw;
+    }
+
+    .slogan-inicio h1{
+        font-size: 54px;
     }
 }
