--- a/public/assets/css/associacao/header_style.css
+++ b/public/assets/css/associacao/header_style.css
@@ -6,8 +6,11 @@ header{
     min-height: 19vh;
     width: 100vw;
     font-family: 'Poppins', sans-serif;
-    background: var(--bg-nav-footer);
- 
+    background: var(--bg-nav-footer); 
+}
+
+nav{
+    width: 100%;
 }
 
 .logo {
@@ -31,7 +34,7 @@ a#descritivo_hambuguer {
 .links {
     display: flex;
     justify-content: space-around;
-    width: 40%;
+    width: 100%;
 }
 
 .links li {
@@ -56,7 +59,7 @@ a#descritivo_hambuguer {
 /* Responsividade */
 @media screen and (max-width:1024px) {
     .links {
-        width: 60%;
+        width: 100%;
     }
 }
 
